# TieBreakServer

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTORS.md  LICENSE  README.md  ReleaseNotes.md  docker-compose.yaml  docker-rebuild.ps1  install.ps1  pyproject.toml
.github/ISSUE_TEMPLATE/: bugfix.md  release.md
.github/workflows/: 01-pre-commit-and-document-check.yaml  03-ci.yaml  04-build-and-deploy-to-production.yaml
src/tiebreakserver/: main.py
src/tiebreakserver/core/: berger.py  chessjson.py  chessserver.py  commonmain.py  config.py  convert.py  fidetables.py  helpers.py  jsonscheme.py  rating.py  tiebreak.py  tiebreakchecker.py  trf2json.py  ts2json.py  verifyjch.py
src/tiebreakserverapi/: main.py
src/tiebreakserverapi/core/: commonmain.py  config.py  dbdef.py  dependencies.py  tiebreak.py  tiebreakchecker.py  trf2json.py  ts2json.py  verifyjch.py
tests/: test_config.py
