[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.codespell]
count = ''
quiet-level = 2
skip = 'documentation/Archive/*'
ignore-words-list = 'add-word-here'

[tool.coverage.run]
source = ['src', 'tests']

[tool.isort]
profile = "black"

[tool.poetry]
name = 'TieBreakServer'
version = '1.0.0'
description = 'The TieBreakServer is an open-source project by the FIDE Technical Committee, providing developers with fast, accurate, and consistent tie-break calculations while ensuring rapid implementation of updated pairing regulations.'
authors = [
    "Otto Milvang <sjakk@milvang.no>"
    #    "Hendrik du Toit <hendrik@brightedge.co.za>"
]
license = "file:LICENSE"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business",
    "Programming Language :: Python :: 3.12"
]
# documentation = "https://readthedocs.org"
homepage = 'https://github.com/TEC-FIDE/TieBreakServer'
repository = "https://github.com/TEC-FIDE/TieBreakServer.git"

[tool.poetry.dependencies]
python = "^3.12.2"
pydantic-settings = "^2.4.0"
mysql-connector-python = "^9.0.0"
pydantic = "^2.8.2"
sqlalchemy = "==1.4.52"
fastapi = "^0.115.5"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
mdformat-gfm = "^0.3.6"
mdformat-frontmatter = "^2.0.8"
mdformat-footnote = "^0.1.1"
pygments = "^2.16.999"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
rstcheck = "^6.2.4"
black = "^24.8.0"
flake8 = "^7.1.1"
pre-commit = "^3.8.0"
build = "^1.2.1"

[tool.poetry.urls]
changelog = "https://github.com/TEC-FIDE/TieBreakServer/blob/master/ReleaseNotes.md"
issues = "https://github.com/TEC-FIDE/TieBreakServer/blob/master/issues"

[tool.pytest.ini_options]
addopts = ['-vv', '--ignore-glob=*\\Archive']
#addopts = ['--import-mode=importlib', "-v", "--cov=./", "--ignore-glob=*\\Archive", "--cov-report=html"]
markers = [
    "config: Run config tests",
    "dbdef: Run dbdef tests ",
    "select: Run a selection of tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
pythonpath = ['src', 'src/rtedb', 'tests']
testpaths = 'tests'
